y.output
Terminales no usados en la gramática

   TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    2 initialize_hash: %empty

    3 escritura1: %empty

    4 escritura2: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   12 tipo: TOK_INT
   13     | TOK_BOOLEAN

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   19 fn_declaracion: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   20 funcion: fn_declaracion sentencias TOK_LLAVEDERECHA

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: tipo identificador

   26 declaraciones_funcion: declaraciones
   27                      | %empty

   28 sentencias: sentencia
   29           | sentencia sentencias

   30 sentencia: sentencia_simple TOK_PUNTOYCOMA
   31          | bloque

   32 sentencia_simple: asignacion
   33                 | lectura
   34                 | escritura
   35                 | retorno_funcion

   36 bloque: condicional
   37       | bucle

   38 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   39           | elemento_vector TOK_ASIGNACION exp

   40 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   41 condicional: if_exp sentencias TOK_LLAVEDERECHA
   42            | if_exp sentencias TOK_LLAVEDERECHA end_else TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   43 end_else: %empty

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   45 bucle: while_exp body_while sentencias TOK_LLAVEDERECHA

   46 body_while: exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   47 while_exp: TOK_WHILE TOK_PARENTESISIZQUIERDO

   48 lectura: TOK_SCANF TOK_IDENTIFICADOR

   49 escritura: TOK_PRINTF exp

   50 retorno_funcion: TOK_RETURN exp

   51 exp: exp TOK_MAS exp
   52    | exp TOK_MENOS exp
   53    | exp TOK_DIVISION exp
   54    | exp TOK_ASTERISCO exp
   55    | TOK_MENOS exp
   56    | exp TOK_AND exp
   57    | exp TOK_OR exp
   58    | TOK_NOT exp
   59    | TOK_IDENTIFICADOR
   60    | constante
   61    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   62    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   63    | elemento_vector
   64    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   65 lista_expresiones: exp resto_lista_expresiones
   66                  | %empty

   67 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   68                        | %empty

   69 comparacion: exp TOK_IGUAL exp
   70            | exp TOK_DISTINTO exp
   71            | exp TOK_MENORIGUAL exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENOR exp
   74            | exp TOK_MAYOR exp

   75 constante: constante_logica
   76          | constante_entera

   77 constante_logica: TOK_TRUE
   78                 | TOK_FALSE

   79 constante_entera: TOK_CONSTANTE_ENTERA

   80 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 12
TOK_BOOLEAN (260) 13
TOK_ARRAY (261) 11
TOK_FUNCTION (262) 18
TOK_IF (263) 44
TOK_ELSE (264) 42
TOK_WHILE (265) 47
TOK_SCANF (266) 48
TOK_PRINTF (267) 49
TOK_RETURN (268) 50
TOK_PUNTOYCOMA (269) 7 23 30
TOK_COMA (270) 15 67
TOK_PARENTESISIZQUIERDO (271) 19 44 47 61 62 64
TOK_PARENTESISDERECHO (272) 19 44 46 61 62 64
TOK_CORCHETEIZQUIERDO (273) 11 40
TOK_CORCHETEDERECHO (274) 11 40
TOK_LLAVEIZQUIERDA (275) 1 19 42 44 46
TOK_LLAVEDERECHA (276) 1 20 41 42 45
TOK_ASIGNACION (277) 38 39
TOK_MAS (278) 51
TOK_MENOS (279) 52 55
TOK_DIVISION (280) 53
TOK_ASTERISCO (281) 54
TOK_AND (282) 56
TOK_OR (283) 57
TOK_NOT (284) 58
TOK_IGUAL (285) 69
TOK_DISTINTO (286) 70
TOK_MENORIGUAL (287) 71
TOK_MAYORIGUAL (288) 72
TOK_MENOR (289) 73
TOK_MAYOR (290) 74
TOK_IDENTIFICADOR (291) 18 38 40 48 59 80
TOK_CONSTANTE_ENTERA (292) 79
TOK_TRUE (293) 77
TOK_FALSE (294) 78
TOK_ERROR (295)


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
programa (42)
    en la izquierda: 1, en la derecha: 0
initialize_hash (43)
    en la izquierda: 2, en la derecha: 1
escritura1 (44)
    en la izquierda: 3, en la derecha: 1
escritura2 (45)
    en la izquierda: 4, en la derecha: 1
declaraciones (46)
    en la izquierda: 5 6, en la derecha: 1 6 26
declaracion (47)
    en la izquierda: 7, en la derecha: 5 6
clase (48)
    en la izquierda: 8 9, en la derecha: 7
clase_escalar (49)
    en la izquierda: 10, en la derecha: 8
clase_vector (50)
    en la izquierda: 11, en la derecha: 9
tipo (51)
    en la izquierda: 12 13, en la derecha: 10 11 18 25
identificadores (52)
    en la izquierda: 14 15, en la derecha: 7 15
funciones (53)
    en la izquierda: 16 17, en la derecha: 1 16
fn_name (54)
    en la izquierda: 18, en la derecha: 19
fn_declaracion (55)
    en la izquierda: 19, en la derecha: 20
funcion (56)
    en la izquierda: 20, en la derecha: 16
parametros_funcion (57)
    en la izquierda: 21 22, en la derecha: 19
resto_parametros_funcion (58)
    en la izquierda: 23 24, en la derecha: 21 23
parametro_funcion (59)
    en la izquierda: 25, en la derecha: 21 23
declaraciones_funcion (60)
    en la izquierda: 26 27, en la derecha: 19
sentencias (61)
    en la izquierda: 28 29, en la derecha: 1 20 29 41 42 45
sentencia (62)
    en la izquierda: 30 31, en la derecha: 28 29
sentencia_simple (63)
    en la izquierda: 32 33 34 35, en la derecha: 30
bloque (64)
    en la izquierda: 36 37, en la derecha: 31
asignacion (65)
    en la izquierda: 38 39, en la derecha: 32
elemento_vector (66)
    en la izquierda: 40, en la derecha: 39 63
condicional (67)
    en la izquierda: 41 42, en la derecha: 36
end_else (68)
    en la izquierda: 43, en la derecha: 42
if_exp (69)
    en la izquierda: 44, en la derecha: 41 42
bucle (70)
    en la izquierda: 45, en la derecha: 37
body_while (71)
    en la izquierda: 46, en la derecha: 45
while_exp (72)
    en la izquierda: 47, en la derecha: 45
lectura (73)
    en la izquierda: 48, en la derecha: 33
escritura (74)
    en la izquierda: 49, en la derecha: 34
retorno_funcion (75)
    en la izquierda: 50, en la derecha: 35
exp (76)
    en la izquierda: 51 52 53 54 55 56 57 58 59 60 61 62 63 64, en la derecha:
    38 39 40 44 46 49 50 51 52 53 54 55 56 57 58 61 65 67 69 70 71
    72 73 74
lista_expresiones (77)
    en la izquierda: 65 66, en la derecha: 64
resto_lista_expresiones (78)
    en la izquierda: 67 68, en la derecha: 65 67
comparacion (79)
    en la izquierda: 69 70 71 72 73 74, en la derecha: 62
constante (80)
    en la izquierda: 75 76, en la derecha: 60
constante_logica (81)
    en la izquierda: 77 78, en la derecha: 75
constante_entera (82)
    en la izquierda: 79, en la derecha: 11 76
identificador (83)
    en la izquierda: 80, en la derecha: 14 15 25 64


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 2 (initialize_hash)

    programa         ir al estado 1
    initialize_hash  ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: initialize_hash . TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_MAIN  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    1 programa: initialize_hash TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 5


Estado 5

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    declaraciones  ir al estado 9
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    clase_vector   ir al estado 13
    tipo           ir al estado 14


Estado 6

   12 tipo: TOK_INT .

    $default  reduce usando la regla 12 (tipo)


Estado 7

   13 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 13 (tipo)


Estado 8

   11 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 15


Estado 9

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 3 (escritura1)

    escritura1  ir al estado 16


Estado 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7
    TOK_ARRAY    desplazar e ir al estado 8

    $default  reduce usando la regla 5 (declaraciones)

    declaraciones  ir al estado 17
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    clase_vector   ir al estado 13
    tipo           ir al estado 14


Estado 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 19
    identificador    ir al estado 20


Estado 12

    8 clase: clase_escalar .

    $default  reduce usando la regla 8 (clase)


Estado 13

    9 clase: clase_vector .

    $default  reduce usando la regla 9 (clase)


Estado 14

   10 clase_escalar: tipo .

    $default  reduce usando la regla 10 (clase_escalar)


Estado 15

   11 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 21


Estado 16

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 . funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 23
    fn_name         ir al estado 24
    fn_declaracion  ir al estado 25
    funcion         ir al estado 26


Estado 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 6 (declaraciones)


Estado 18

   80 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 80 (identificador)


Estado 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 27


Estado 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 28

    $default  reduce usando la regla 14 (identificadores)


Estado 21

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 29

    constante_entera  ir al estado 30


Estado 22

   18 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 31


Estado 23

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones . escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 4 (escritura2)

    escritura2  ir al estado 32


Estado 24

   19 fn_declaracion: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 33


Estado 25

   20 funcion: fn_declaracion . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 40
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp            ir al estado 47
    bucle             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 26

   16 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 53
    fn_name         ir al estado 24
    fn_declaracion  ir al estado 25
    funcion         ir al estado 26


Estado 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 7 (declaracion)


Estado 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 54
    identificador    ir al estado 20


Estado 29

   79 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 79 (constante_entera)


Estado 30

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 55


Estado 31

   18 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 56


Estado 32

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 57
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp            ir al estado 47
    bucle             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 33

   19 fn_declaracion: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    $default  reduce usando la regla 22 (parametros_funcion)

    tipo                ir al estado 58
    parametros_funcion  ir al estado 59
    parametro_funcion   ir al estado 60


Estado 34

   44 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 61


Estado 35

   47 while_exp: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62


Estado 36

   48 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 63


Estado 37

   49 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 71
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 38

   50 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 76
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 39

   38 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   40 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 77
    TOK_ASIGNACION         desplazar e ir al estado 78


Estado 40

   20 funcion: fn_declaracion sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 79


Estado 41

   28 sentencias: sentencia .
   29           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    $default  reduce usando la regla 28 (sentencias)

    sentencias        ir al estado 80
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp            ir al estado 47
    bucle             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 42

   30 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 81


Estado 43

   31 sentencia: bloque .

    $default  reduce usando la regla 31 (sentencia)


Estado 44

   32 sentencia_simple: asignacion .

    $default  reduce usando la regla 32 (sentencia_simple)


Estado 45

   39 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 82


Estado 46

   36 bloque: condicional .

    $default  reduce usando la regla 36 (bloque)


Estado 47

   41 condicional: if_exp . sentencias TOK_LLAVEDERECHA
   42            | if_exp . sentencias TOK_LLAVEDERECHA end_else TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 83
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    if_exp            ir al estado 47
    bucle             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 48

   37 bloque: bucle .

    $default  reduce usando la regla 37 (bloque)


Estado 49

   45 bucle: while_exp . body_while sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    body_while        ir al estado 84
    exp               ir al estado 85
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 50

   33 sentencia_simple: lectura .

    $default  reduce usando la regla 33 (sentencia_simple)


Estado 51

   34 sentencia_simple: escritura .

    $default  reduce usando la regla 34 (sentencia_simple)


Estado 52

   35 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 35 (sentencia_simple)


Estado 53

   16 funciones: funcion funciones .

    $default  reduce usando la regla 16 (funciones)


Estado 54

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce usando la regla 15 (identificadores)


Estado 55

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO .

    $default  reduce usando la regla 11 (clase_vector)


Estado 56

   18 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce usando la regla 18 (fn_name)


Estado 57

    1 programa: initialize_hash TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 86


Estado 58

   25 parametro_funcion: tipo . identificador

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificador  ir al estado 87


Estado 59

   19 fn_declaracion: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  desplazar e ir al estado 88


Estado 60

   21 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  desplazar e ir al estado 89

    $default  reduce usando la regla 24 (resto_parametros_funcion)

    resto_parametros_funcion  ir al estado 90


Estado 61

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 91
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 62

   47 while_exp: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce usando la regla 47 (while_exp)


Estado 63

   48 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce usando la regla 48 (lectura)


Estado 64

   61 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   62    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 92
    comparacion       ir al estado 93
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 65

   55 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 94
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 66

   58 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 95
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 67

   40 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   59 exp: TOK_IDENTIFICADOR .
   80 identificador: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 77

    TOK_PARENTESISIZQUIERDO  reduce usando la regla 80 (identificador)
    $default                 reduce usando la regla 59 (exp)


Estado 68

   77 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 77 (constante_logica)


Estado 69

   78 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 78 (constante_logica)


Estado 70

   63 exp: elemento_vector .

    $default  reduce usando la regla 63 (exp)


Estado 71

   49 escritura: TOK_PRINTF exp .
   51 exp: exp . TOK_MAS exp
   52    | exp . TOK_MENOS exp
   53    | exp . TOK_DIVISION exp
   54    | exp . TOK_ASTERISCO exp
   56    | exp . TOK_AND exp
   57    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 96
    TOK_MENOS      desplazar e ir al estado 97
    TOK_DIVISION   desplazar e ir al estado 98
    TOK_ASTERISCO  desplazar e ir al estado 99
    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101

    $default  reduce usando la regla 49 (escritura)


Estado 72

   60 exp: constante .

    $default  reduce usando la regla 60 (exp)


Estado 73

   75 constante: constante_logica .

    $default  reduce usando la regla 75 (constante)


Estado 74

   76 constante: constante_entera .

    $default  reduce usando la regla 76 (constante)


Estado 75

   64 exp: identificador . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 102


Estado 76

   50 retorno_funcion: TOK_RETURN exp .
   51 exp: exp . TOK_MAS exp
   52    | exp . TOK_MENOS exp
   53    | exp . TOK_DIVISION exp
   54    | exp . TOK_ASTERISCO exp
   56    | exp . TOK_AND exp
   57    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 96
    TOK_MENOS      desplazar e ir al estado 97
    TOK_DIVISION   desplazar e ir al estado 98
    TOK_ASTERISCO  desplazar e ir al estado 99
    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101

    $default  reduce usando la regla 50 (retorno_funcion)


Estado 77

   40 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 103
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 78

   38 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 104
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 79

   20 funcion: fn_declaracion sentencias TOK_LLAVEDERECHA .

    $default  reduce usando la regla 20 (funcion)


Estado 80

   29 sentencias: sentencia sentencias .

    $default  reduce usando la regla 29 (sentencias)


Estado 81

   30 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce usando la regla 30 (sentencia)


Estado 82

   39 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_IDENTIFICADOR        desplazar e ir al estado 67
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 68
    TOK_FALSE                desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 105
    constante         ir al estado 72
    constante_logica  ir al estado 73
    constante_entera  ir al estado 74
    identificador     ir al estado 75


Estado 83
